[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repertoir"
version = "0.0.1"
authors = [
  { name="Guillaume Attia", email="guillaume.attia91@gmail.com" },
]
description = "Manage your media library"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]

[project.urls]
Homepage = "https://gitlab."
Issues = "https://github.com/pypa/sampleproject/issues"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
