[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repertoir"
version = "0.0.1"
authors = [
  { name="Guillaume Attia", email="guillaume.attia91@gmail.com" },
]
description = "Manage your media library"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
  "click"
]

[project.urls]
Homepage = "https://gitlab.com/aittaemualliug/repertoir"
Issues = "https://gitlab.com/aittaemualliug/repertoir/issues"

[tool.hatch.build]
include = [
  "src"
]

[project.scripts]
repertoir = "src.repertoir.commands:cli"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
