[tool.poetry]
name = "repertoir"
version = "0.1.0"
authors = [
    "Guillaume Attia <guillaume.attia91@gmail.com>",
]
description = "Manage your media library"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = "MIT"
packages = [
    {include = "repertoir", from = "src"}
]

[tool.poetry.scripts]
repertoir = "repertoir.entry_points.commands:cli"

[tool.poetry.dependencies]
python = "3.11.9"
click = ">=8.1.7"
# yt-dlp = ">=2023.11.16"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
